# pystatsd-go

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  pyproject.toml  tests.py
docs/: conf.py  index.rst
src/statsd/: __init__.py
src/statsd/client/: __init__.py  base.py  stream.py  timer.py  udp.py
