[tool.poetry]
name = "pystatsd-go"
version = "0.1.0"
description = "pystatsd replacement with support for GO statsd server tagging"
authors = ["Cameron Hurst <wakemaster39@gmail.com>"]
license = "MIT"
repository = "https://github.com/wakemaster39/pystatsd-go.git"
readme = "README.rst"
homepage = "https://github.com/wakemaster39/pystatsd-go.git"
documentation = "https://github.com/wakemaster39/pystatsd-go.git"
classifiers = [
        'Development Status :: 5 - Production/Stable',
        'Environment :: Web Environment',
        'Intended Audience :: Developers',
        'License :: OSI Approved :: MIT License',
        'Operating System :: OS Independent',
        'Programming Language :: Python',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.6',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
        'Topic :: Software Development :: Libraries :: Python Modules',
]
packages = [
    { include = "statsd", from = "src" },
]


[tool.poetry.dependencies]
python = "^3.6.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
isort = "^4.3.21"
mypy = "^0.770"
eradicate = "^1.0"
gitlint = "^0.13.1"
pre-commit = "^2.3.0"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
known_third_party = ["mock", "nose", "statsd"]
line_length=120
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
combine_as_imports=true

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.idea
  | \.vscode
  | \.venv
  | build
  | dist
)/
'''
